# openautolink

./: .gitignore  README.md  index.html  update.json
.github/: copilot-instructions.md
.github/instructions/: app-kotlin.instructions.md  bridge-cpp.instructions.md  bridge-dev-workflow.instructions.md  emulator-ui-testing.instructions.md  ui-requirements.instructions.md
.github/workflows/: build-companion.yml  ci.yml  release-apk.yml  release-bridge.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aa_session.cpp  aasdk_jni.cpp  jni_bridge.cpp  jni_channel_handlers.cpp  jni_session.cpp  jni_session.h  openssl_compat.h
app/src/main/java/com/openautolink/app/: MainActivity.kt  OalApplication.kt
app/src/main/java/com/openautolink/app/audio/: AudioFocusManager.kt  AudioFrame.kt  AudioPlayer.kt  AudioPlayerImpl.kt  AudioPurposeCoordinator.kt  AudioPurposeSlot.kt  CallState.kt  MicCaptureManager.kt
app/src/main/java/com/openautolink/app/cluster/: ClusterMainSession.kt  OalClusterSession.kt
app/src/main/java/com/openautolink/app/data/: AppPreferences.kt
app/src/main/java/com/openautolink/app/diagnostics/: GmReconProbe.kt  LogUploader.kt  OalLog.kt  RemoteDiagnostics.kt  SettingsReceiver.kt  TelemetryCollector.kt
app/src/main/java/com/openautolink/app/input/: SteeringWheelController.kt  TouchForwarderImpl.kt  VehicleDataForwarderImpl.kt
app/src/main/java/com/openautolink/app/media/: OalMediaBrowserService.kt  OalMediaSessionManager.kt
app/src/main/java/com/openautolink/app/navigation/: NavigationDisplay.kt  NavigationDisplayImpl.kt
app/src/main/java/com/openautolink/app/session/: SessionManager.kt  SessionState.kt  VideoStallPolicy.kt
app/src/main/java/com/openautolink/app/transport/: AasdkJni.kt  BridgeDiscovery.kt  BridgeUpdateManager.kt  ConfigUpdateSender.kt  ConnectionManager.kt  ConnectionState.kt  ControlMessage.kt  ControlMessageSerializer.kt  DirectAaTransport.kt  HostUsability.kt  NetworkInterfaceScanner.kt  PhoneDiscovery.kt  TcpControlChannel.kt  TcpVideoChannel.kt
app/src/main/java/com/openautolink/app/transport/aasdk/: AasdkNative.kt  AasdkSdrConfig.kt  AasdkSession.kt  AasdkSessionCallback.kt
app/src/main/java/com/openautolink/app/transport/direct/: AaNearbyManager.kt  AaSslEngine.kt  DirectAaSession.kt
app/src/main/java/com/openautolink/app/video/: MediaCodecDecoder.kt  NalParser.kt
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: automotive_app_desc.xml  data_extraction_rules.xml  network_security_config.xml  usb_device_filter.xml
app/src/test/java/com/openautolink/app/audio/: AudioPurposeCoordinatorTest.kt
app/src/test/java/com/openautolink/app/input/: SteeringWheelControllerTest.kt  VehicleDataSerializationTest.kt
app/src/test/java/com/openautolink/app/navigation/: NavigationDisplayImplTest.kt
app/src/test/java/com/openautolink/app/session/: SessionStateTest.kt  VideoStallPolicyTest.kt
app/src/test/java/com/openautolink/app/transport/: ControlMessageSerializerTest.kt  HostUsabilityTest.kt  MockOalBridgeServer.kt
bridge/: README.md
bridge/cpc200/oal-cp-broker/: README.md  build.sh
bridge/cpc200/oal-cp-broker/include/: mdns_publish.h  oal_log.h  oal_version.h  relay.h  udp_discover.h
bridge/cpc200/oal-cp-broker/src/: main.c  mdns_publish.c  relay.c  udp_discover.c
bridge/openautolink/: README.md
bridge/openautolink/headless/: CMakeLists.txt  README.md
bridge/openautolink/headless/avahi/: openautolink.service
bridge/openautolink/headless/include/openautolink/: aa_error_codes.hpp  headless_config.hpp  i_car_transport.hpp  live_session.hpp  oal_protocol.hpp  oal_session.hpp  sco_audio.hpp  tcp_car_transport.hpp
bridge/openautolink/headless/src/: live_session.cpp  main.cpp  oal_session.cpp  sco_audio.cpp
bridge/openautolink/scripts/: aa_bt_all.py
bridge/sbc/: BUILD.md  apply-bridge-update.sh  install.sh  openautolink-wireless.service  openautolink.env  openautolink.service  run-openautolink.sh  setup-network.sh  stop-wireless.sh
build-relay-arm64/: openautolink-relay  openautolink-relay-stripped
companion/: build.gradle.kts
companion/src/main/: AndroidManifest.xml
companion/src/main/java/com/openautolink/companion/: MainActivity.kt
companion/src/main/java/com/openautolink/companion/autostart/: AutoStartReceiver.kt
companion/src/main/java/com/openautolink/companion/connection/: AaProxy.kt
companion/src/main/java/com/openautolink/companion/diagnostics/: CompanionFileLogger.kt  LogUploader.kt
companion/src/main/java/com/openautolink/companion/service/: CompanionService.kt  NearbyAdvertiser.kt  TcpAdvertiser.kt
companion/src/main/java/com/openautolink/companion/ui/: MainScreen.kt
companion/src/main/java/com/openautolink/companion/wifi/: CarWifiManager.kt
docs/: architecture.md  bridge-update.md  carplay-implementation-plan.md  carplay-recon.md  direct-aa-plan.md  direct-mode-plan.md  embedded-knowledge.md  gm-aaos-recon.md  multi-phone-nearby.md  multi-phone.md  networking.md  privacy-policy.md  protocol.md  testing.md  work-plan.md
docs/future/: carplay-bridge-implementation.md
gradle/: libs.versions.toml
hfp_helper/: README.md
hfp_helper/docs/: design.md
hfp_helper/firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
hfp_helper/firmware/main/: CMakeLists.txt  audio_relay.c  audio_relay.h  hfp_client.c  hfp_client.h  main.c  provisioning.c  provisioning.h  transport_wifi.c  transport_wifi.h
hfp_helper/scripts/: build.ps1  flash.ps1  monitor.ps1
scripts/: build-bridge-wsl.sh  bundle-release.ps1  create-release.ps1  deploy-bridge.ps1  mfi_auth_daemon  mfi_auth_daemon.c  mfi_probe  mfi_probe.c  recon-client.py  save-signing-credentials.ps1  setup-wsl-cross-compile.sh
scripts/android/: build-bundle.ps1  invoke-build.ps1
scripts/cpc200/: Enter-LeanMode.ps1  README.md  build-wpa.sh
scripts/cpc200/config/: oal-bridge.conf.template  wpa_supplicant.build.config  wpa_supplicant.conf.template
scripts/cpc200/deploy/: install-wpa.sh  lean-ap-mode.sh  start-bridge.sh
(+24 files in other folders)
